--- a/Tree_Project/Tree_Project1/Tree_Project1/Tree_Project1.vcxproj
+++ b/Tree_Project/Tree_Project1/Tree_Project1/Tree_Project1.vcxproj
@@ -127,9 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Binary_Tree.cpp" />
-    <ClCompile Include="Tree_Project1.cpp">
+    <ClCompile Include="Binary_Tree.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="Tree_Project1.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
