--- a/Tree_Project/Tree_Project1/Tree_Project1/Tree_Project1.vcxproj.filters
+++ b/Tree_Project/Tree_Project1/Tree_Project1/Tree_Project1.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Binary_Tree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1035test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
