1920 . 이진탐색 문제

--- a/Algorithm/Algorithm_Project1/Algorithm_Project1/Algorithm_Project1.vcxproj
+++ b/Algorithm/Algorithm_Project1/Algorithm_Project1/Algorithm_Project1.vcxproj
@@ -128,8 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="14894.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="binarysearch1920 .cpp" />
     <ClCompile Include="TwoDimensionalVector.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
